# ment-creator

./: .env  .gitignore  CLAUDE.md  Dockerfile.fishspeech  Dockerfile.fishspeech-cpu  Dockerfile.fishspeech-cpu.v2  Dockerfile.fishspeech.fixed  Dockerfile.fishspeech.v2  ENHANCED_VERSION_MANAGEMENT.md  FISH_SPEECH_DOCKER_TROUBLESHOOTING.md  MIGRATION_ERROR_RESOLUTION_COMPLETE.md  MIGRATION_GUIDE.md  MULTIPLE_HEADS_GUIDE.md  README.md  SELF_REFERENCE_FIX_COMPLETE.md  SQLMODEL_FIX_GUIDE.md  TROUBLESHOOTING.md  TTS_TRANSFORMERS_COMPATIBILITY_FIX.md  TTS_사용_가이드.md  TTS_사용_가이드_v2.md  check_migration.py  debug_tts_list.sh  docker-compose.yml  final_validation.py  fish-speech-docker.sh  fix_migration_executable.sh  fix_multiple_heads.py  fix_self_reference.sh  hpmp-presentation.tsx  quick_fix_heads.sh  rebuild-fish-speech.sh  run_migration.sh  run_tts_test.sh  safe_migration.sh  set_executable.py  start_app.sh  start_backend.sh  start_frontend.sh  start_tts_dev.sh  test_ars_nodes.py  (+7 more)
backend/: .env  .env.sqlite  Dockerfile  FISH_SPEECH_INSTALLATION_GUIDE.md  README.md  VOICE_MODELS_API_FIX.md  VOICE_MODEL_TROUBLESHOOTING.md  alembic.ini  check_database.py  check_postgres.py  check_tts_data.py  debug_models_api.py  diagnose_tts.py  fix_database.sh  fix_fish_speech_installation.py  fix_fish_speech_quick_executable.sh  fix_pytorch_compatibility.py  install_fish_speech.py  install_pyrootutils_direct.py  install_pyrootutils_final.py  pyproject.toml  setup_db.sh  setup_fish_speech.sh  setup_postgresql.sh  start_server.sh  start_server_debug.sh  switch_to_sqlite.sh  test_api_data.py  test_fish_speech_integration.py  test_fixed_api.py  test_tts_setup.py  test_tts_standalone.py  test_voice_models.py  test_voice_models_api.sh
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0064f815f443_add_deployment_models.py  0cc81e9f6eb0_deleted_voice_actor_models.py  57c7e781ea1b_merge_all_heads.py  772cc1d17f77_fix_foreign_key_relationships.py  797199376b8e_add_source_handle_and_target_handle_to_.py  897c6edf51f9_add_a_field_of_file_path.py  98a64ae4170c_merge_heads.py  9c92bbd56a77_create_a_user_table.py  a1b2c3d4e5f6_add_voice_actor_and_tts_models.py  b2c3d4e5f6a7_add_scenario_management_models.py  b8ba2777a1e4_enhance_scenario_nodes_with_ars_support.py  c3d4e5f6a7b8_add_scenario_tts_models.py  ca1de7c09d1e_add_self_referential_foreign_key_to_.py  cb04883a274c_create_ment_table.py  cf5e06ba3710_create_initial_tables.py  d275b7deb242_create_voice_actor_model.py  e4f5a6b7c8d9_enhanced_scenario_version_management.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: dashboard.py  deployments.py  login.py  ment.py  private.py  scenario_tts.py  scenarios.py  tts_engines.py  users.py  utils.py  voice_actors.py  voice_actors_old.py
backend/app/core/: config.py  db.py
backend/app/crud/: crud_user.py  ment.py
backend/app/models/: __init__.py  deployment.py  ment.py  scenario.py  scenario_tts.py  tts.py  users.py  voice_actor.py
backend/app/services/: __init__.py  deployment_service.py  fish_speech_tts_service.py  scenario_version_service.py  simulation_service.py  tts_factory.py  tts_service.py  tts_service_debug.py
backend/app/services/audio/: __init__.py  audio_preprocessor.py
backend/app/services/mock/: __init__.py  fish_speech_mock_service.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_login.py  test_private.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/utils/: user.py
backend/audio_files/: .gitkeep
backend/db/: docker-compose.yml
backend/docs/: korean_tts_optimization_guide.md
backend/redis/: docker-compose.yml
backend/scripts/: fix_alembic.sh  prestart.sh  reset_db.sh
backend/temp_fix/: execute_fix.py  fix_fish_speech.sh  fix_fish_speech_deps.py
backend/voice_samples/: .gitkeep
docs/: VOICE_SAMPLE_QUALITY_GUIDE.md  api_quick_reference.md  ars-scenario-nodes.md  current_progress.md  development_setup.md  implementation_guide.md  project_overview.md  troubleshooting_guide.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: navbar.tsx  (+1 more)
frontend/ment-gen/: Dockerfile  next.config.mjs  package-lock.json  package.json
nginx/: nginx.conf
scripts/: commit_fix.sh  commit_scenario_integration.sh  debug_system.sh  fix_frontend_error.sh  git_status.sh  make_executable.sh  run_fix.sh  run_system.sh  setup_system.sh  start_backend.sh  start_frontend.sh  start_system.sh
tts_coqui/: .gitignore  main.py  pyproject.toml
(+50 files in other folders)
