[project]
name = "ment"
version = "0.1.0"
description = "Create ARS ment using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "passlib>=1.7.4",
    "psycopg[binary,pool]>=3.2.5",
    "pydantic-settings>=2.8.0",
    "pyjwt>=2.10.1",
    "ruff>=0.9.6",
    "sentry-sdk>=2.22.0",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    # TTS 관련 의존성 (PyTorch 2.6+ 호환성 문제 방지)
    "TTS>=0.22.0",
    "torch>=2.0.0,<2.6.0",
    "torchaudio>=2.0.0,<2.6.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # 백그라운드 작업용
    "celery>=5.3.0",
    "redis>=5.0.0",
]
