[project]
name = "ment"
version = "0.1.0"
description = "Create ARS ment using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "passlib>=1.7.4",
    "psycopg[binary,pool]>=3.2.5",
    "pydantic-settings>=2.8.0",
    "pyjwt>=2.10.1",
    "ruff>=0.9.6",
    "sentry-sdk>=2.22.0",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    # TTS 관련 의존성 (기존 Coqui TTS 호환성 유지)
    "TTS>=0.22.0",
    "torch>=2.0.0,<2.6.0",
    "torchaudio>=2.0.0,<2.6.0",
    "transformers>=4.21.0,<4.50.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # Fish Speech 관련 의존성
    "httpx>=0.25.0", # Fish Speech API 호출용
    "aiofiles>=23.0.0", # 비동기 파일 처리
    "numpy>=1.24.0,<=1.26.4", # Fish Speech 호환성
    "scipy>=1.10.0",
    # Fish Speech 핵심 의존성
    "pyrootutils>=1.0.4",
    "hydra-core>=1.3.2",
    "natsort>=8.4.0",
    "einops>=0.7.0",
    "rich>=13.5.3",
    "grpcio>=1.58.0",
    "loguru>=0.6.0",
    "resampy>=0.4.3",
    "zstandard>=0.22.0",
    "pydub",
    "opencc-python-reimplemented==0.1.7",
    "ormsgpack",
    "tiktoken>=0.8.0",
    "cachetools",
    # 백그라운드 작업용
    "celery>=5.3.0",
    "redis>=5.0.0",
    "datasets==2.18.0",
    "lightning>=2.1.0",
    "wandb>=0.15.11",
    "loralib>=0.1.2",
    "silero-vad>=5.1.2",
    "utils>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
