[project]
name = "ment"
version = "0.1.0"
description = "Create ARS ment using AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "passlib>=1.7.4",
    "psycopg[binary,pool]>=3.2.5",
    "pydantic-settings>=2.8.0",
    "pyjwt>=2.10.1",
    "ruff>=0.9.6",
    "sentry-sdk>=2.22.0",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    # TTS 관련 의존성 (Coqui TTS)
    "TTS>=0.22.0",
    "torch>=2.0.0,<2.6.0",
    "torchaudio>=2.0.0,<2.6.0",
    "transformers>=4.21.0,<4.50.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # 기본 유틸리티 의존성
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "numpy>=1.24.0,<=1.26.4",
    "scipy>=1.10.0",
    # 백그라운드 작업용
    "celery>=5.3.0",
    "redis>=5.0.0",
    # 오디오 전처리용
    "noisereduce>=3.0.0",
    "pyloudnorm>=0.1.1",
    "aiohttp>=3.12.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
